Apagar uma linha de ancora sem sentido

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>Curso Superior em Tecnologia em Sistemas para Internet</p>
         <p>2010-2013</p>
     </div>
-    <footer>© Nzola Fifi - 12/2023</footer>
+    <footer><a href="https://github.com/nfifi/CV_Elon_Musk">Repositorio Git Hub</a></footer>
 </body>
 
 </html>
